--- a/index.html
+++ b/index.html
@@ -43,7 +43,19 @@ type="image/svg+xml"
 pluginspage="http://www.adobe.com/svg/viewer/install/" /></p> 
     <h3 id="subheader-2">Execute</h3>
     <p id="p-1">We put everything we have into our work.</p>
-    <h4>Designed in New York</h4>
+    <h4 id="img-strip">Designed in New York</h4>
+      <h3 id="subheader-2">Portfolio</h3>
+    <p id="p-1">Coming Soon</p>
+      <h3 id="subheader-2">Team</h3>
+    <p id="p-1">We're Hiring</p>
+      <h3 id="subheader-2">Contact</h3>
+    <p id="p-1">Phone: (555)-555-5555
+      <br />
+    E-mail: test@example.com
+    <br />
+  Twitter: @test</p>
+
+  <p id="footer">&copy; Broadway 2016 <a>Home</a> <a>About</a> <a>Work</a> <a>Team</a> <a>Contact</a></p>
   </div>
   
   <!--
