--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <!--  Meta  -->
   <meta charset="UTF-8" />
-  <title>My New Pen!</title>
+  <title>Broadway Design</title>
   
   <!--  Styles  -->
   <link rel="stylesheet" href="styles/index.processed.css">
@@ -12,7 +12,7 @@
 <body>
   
   <div id="header">
-    <h1>Broadway Design</h1>
+    <h1 id="header-text">Broadway Design</h1>
     <ul id="nav">
       <li><p>Home</p></li>
       <li><p>About</p></li>
